Cocoa: Native filedialog does not apply filters on app-bundles

The native file dialog (and finder) handles bundles (like .app) like
normal files rather than directories, unless specified otherwise. But
since they are directories at the same time, we skip sending them
through the name filters. This patch makes sure that we are more
consistent on this matter for the cocoa port.

Task-number: QTBUG-834
Reviewed-by: msorvig