src/gui/dialogs/qfiledialog_mac.mm
@@ -295,10 +295,14 @@ QT_USE_NAMESPACE
     if (!mQDirFilterEntryList->contains(info.fileName()))
         return NO;
 
-    // Always accept directories regardless of their names:
+    // Always accept directories regardless of their names (unless it is a bundle):
     BOOL isDir;
-    if ([[NSFileManager defaultManager] fileExistsAtPath:filename isDirectory:&isDir] && isDir)
-        return YES;
+    if ([[NSFileManager defaultManager] fileExistsAtPath:filename isDirectory:&isDir] && isDir) {
+        if ([mSavePanel treatsFilePackagesAsDirectories] == NO) {
+            if ([[NSWorkspace sharedWorkspace] isFilePackageAtPath:filename] == NO)
+                return YES;
+        }
+    }
 
     // No filter means accept everything
     if (mSelectedNameFilter->isEmpty())
